# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: tests.yml
page_analyzer/: app.py  db_manager.py  utils.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
