[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Anton Arkhipov", email = "antonolegovich44@yandex.ru" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "flask>=3.1.0,<4",
    "gunicorn>=23.0.0,<24",
    "python-dotenv>=1.0.1,<2",
    "psycopg2-binary>=2.9.10,<3",
    "validators>=0.34.0,<0.35",
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.12.3,<5",
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]

[tool.hatch.build.targets.sdist]
include = ["page_analyzer"]

[tool.hatch.build.targets.wheel]
include = ["page_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
